# git-browse

./: .codeclimate.yml  .coveragerc  .drone.yml  .pyup.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  browse.py  install.sh  pyproject.toml  requirements-test.txt  setup.py  test.py  test_git_urls.py
.github/workflows/: publish.yml
git_browse/: bitbucket.py  browse.py  github.py  gitlab.py  godocs.py  phabricator.py  sourcegraph.py  typedefs.py  types.py
git_browse/tests/: test.py  test_bitbucket.py  test_browse.py  test_git_urls.py  test_github.py  test_gitlab.py  test_godocs.py  test_phabricator.py  test_sourcegraph.py  test_typedefs.py  test_types.py  test_util.py
