[project]
name = "git-browse"
authors = [
    {name = "Albert Wang", email = "git@albertyw.com"},
]
description = "Open repositories, directories, and files in the browser"
requires-python = ">=3.7"
keywords = ["github", "phabricator", "repository", "browser"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = []
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.13.0",       # Test coverage
    "ruff==0.14.9",           # Python linter

    # Types
    "mypy==1.19.1",           # Static typing
]

[project.urls]
"Homepage" = "https://github.com/albertyw/git-browse"

[project.scripts]
git_browse = "git_browse.browse:main"

[tool.setuptools.dynamic]
version = {attr = "git_browse.browse.__version__"}
readme = {file = "README.md", content-type="text/markdown"}

[options.package_data]
git_browse = ["py.typed"]

[tool.ruff]
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]
lint.ignore = ["B010"]

[tool.mypy]
strict = true
exclude = [
    "build",
]

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]
